logs/2023-12-05-20-23-17/serverbuild.log
main.c: In function ‘base64_encode’:
main.c:36:38: error: invalid use of incomplete typedef ‘BUF_MEM’ {aka ‘struct buf_mem_st’}
   36 |     char* buffer = (char*)malloc(bptr->length + 1);
      |                                      ^~
main.c:37:24: error: invalid use of incomplete typedef ‘BUF_MEM’ {aka ‘struct buf_mem_st’}
   37 |     memcpy(buffer, bptr->data, bptr->length);
      |                        ^~
main.c:37:36: error: invalid use of incomplete typedef ‘BUF_MEM’ {aka ‘struct buf_mem_st’}
   37 |     memcpy(buffer, bptr->data, bptr->length);
      |                                    ^~
main.c:38:16: error: invalid use of incomplete typedef ‘BUF_MEM’ {aka ‘struct buf_mem_st’}
   38 |     buffer[bptr->length] = '\0';
      |                ^~
ftpServer.c: In function ‘ftpserver_start_pasv_data_conn’:
ftpServer.c:76:9: warning: implicit declaration of function ‘sendfile’ [-Wimplicit-function-declaration]
   76 |         sendfile(session->sock_data,fd,NULL,size);
      |         ^~~~~~~~
ftpServer.c:61:52: warning: ‘%s’ directive output may be truncated writing up to 1023 bytes into a region of size 250 [-Wformat-truncation=]
   61 |         snprintf(command, sizeof(command), "echo \"%s\" > temp.txt", response);
      |                                                    ^~                ~~~~~~~~
ftpServer.c:61:9: note: ‘snprintf’ output between 19 and 1042 bytes into a destination of size 256
   61 |         snprintf(command, sizeof(command), "echo \"%s\" > temp.txt", response);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ftpServer.c: In function ‘ftpserver_list’:
ftpServer.c:368:51: warning: ‘%s’ directive output may be truncated writing up to 1023 bytes into a region of size 250 [-Wformat-truncation=]
  368 |         snprintf(command, sizeof(command), "ls -l %s > temp.txt", session->FTP_PATH);
      |                                                   ^~
ftpServer.c:368:9: note: ‘snprintf’ output between 18 and 1041 bytes into a destination of size 256
  368 |         snprintf(command, sizeof(command), "ls -l %s > temp.txt", session->FTP_PATH);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ftpServer.c: In function ‘ftpserver_make_directory’:
ftpServer.c:603:43: warning: ‘%s’ directive output may be truncated writing up to 1023 bytes into a region of size 512 [-Wformat-truncation=]
  603 |     snprintf(dir_path, sizeof(dir_path), "%s%s", session->FTP_PATH, path);
      |                                           ^~
ftpServer.c:603:5: note: ‘snprintf’ output 1 or more bytes (assuming 1024) into a destination of size 512
  603 |     snprintf(dir_path, sizeof(dir_path), "%s%s", session->FTP_PATH, path);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
